--- a/client/src/elements/gameboard/roads/Roads.module.css
+++ b/client/src/elements/gameboard/roads/Roads.module.css
@@ -5,6 +5,8 @@
   flex-wrap: nowrap;
   gap: 22.5%;
   margin-bottom: 14.5%;
+  pointer-events: auto;
+  z-index: 10;
 }
 
 .vertRoadsRow {
@@ -14,6 +16,8 @@
   flex-wrap: nowrap;
   gap: 115%;
   margin-bottom: 15%;
+  pointer-events: auto;
+  z-index: 10;
 }
 
 .turned {
