Сделал генерацию случайной карты на сервере, добавил номера на тайлах

--- a/client/src/elements/gameboard/buildings/Buildings.module.css
+++ b/client/src/elements/gameboard/buildings/Buildings.module.css
@@ -5,11 +5,13 @@
   flex-wrap: nowrap;
   gap: 33%;
   margin-bottom: 18%;
+  z-index: 10;
 }
 
 .house {
   height: 30%;
   width: 30%;
+  z-index: 10;
 }
 
 .lower {
