--- a/client/src/elements/gameboard/map/Map.module.css
+++ b/client/src/elements/gameboard/map/Map.module.css
@@ -46,4 +46,14 @@
   transform-origin: top;
   scale: 10%;
   margin-top: 5.5%;
+  z-index: 1;
+}
+
+.numbersContainer {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 0;
+  transform-origin: top;
+  margin-top: 13%;
 }
