--- a/client/src/elements/gameboard/buildings/Buildings.module.css
+++ b/client/src/elements/gameboard/buildings/Buildings.module.css
@@ -12,6 +12,7 @@
   height: 30%;
   width: 30%;
   z-index: 10;
+  box-sizing: border-box;
 }
 
 .lower {
@@ -44,12 +45,14 @@
   height: 40%;
   width: 40%;
   z-index: 10;
+  box-sizing: border-box;
 }
 
 .vert {
   height: 10%;
   width: 10%;
   z-index: 10;
+  box-sizing: border-box;
 }
 
 @keyframes pulse {
@@ -69,5 +72,6 @@
 }
 
 .update {
-  border: 2px solid aqua;
+  border: 10px solid aqua;
+  border-radius: 50%;
 }
