--- a/client/src/elements/gameboard/map/trade/Trade.module.css
+++ b/client/src/elements/gameboard/map/trade/Trade.module.css
@@ -45,3 +45,10 @@
   padding: 2px 10px;
   margin: 2px 5px;
 }
+
+.wrapper5 {
+  border: 1px solid rgba(57, 68, 80, 0.8);
+  border-radius: 10px;
+  padding: 5px;
+  margin: 5px 0;
+}
