--- a/client/src/styles.module.css
+++ b/client/src/styles.module.css
@@ -89,3 +89,14 @@
   border-color: #007bff;
   box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
+
+
+.modal {
+  display: flex;
+  flex-direction: row;
+  padding: 5px;
+}
+
+.shortContent {
+  color: #2c4fff;
+}
