--- a/client/src/styles.module.css
+++ b/client/src/styles.module.css
@@ -100,3 +100,12 @@
 .shortContent {
   color: #2c4fff;
 }
+
+
+.centeredModal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 16px;
+}
