--- a/client/src/elements/gameboard/map/trade/Trade.module.css
+++ b/client/src/elements/gameboard/map/trade/Trade.module.css
@@ -4,7 +4,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 350px;
-  background-color: #ffffff; /* Замените на нужный цвет фона */
+  background-color: #ffffff;
   box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),
   0px 6px 10px 0px rgba(0,0,0,0.14),
   0px 1px 18px 0px rgba(0,0,0,0.12);
@@ -16,7 +16,7 @@
 .dealsHeader {
   margin-bottom: 16px;
   text-align: center;
-  color: #1976d2; /* Основной цвет MUI по умолчанию */
+  color: #1976d2;
   font-weight: bold;
   font-size: 1.2rem;
 }
@@ -32,7 +32,7 @@
 }
 
 .dealsList::-webkit-scrollbar-thumb {
-  background-color: #90caf9; /* Светло-голубой из палитры MUI */
+  background-color: #90caf9;
   border-radius: 3px;
 }
 
@@ -40,8 +40,8 @@
   padding: 16px;
   margin-bottom: 16px;
   border-radius: 8px;
-  border: 1px solid rgba(0, 0, 0, 0.12); /* Цвет разделителя */
-  background-color: #f5f5f5; /* Фоновый цвет по умолчанию */
+  border: 1px solid rgba(0, 0, 0, 0.12);
+  background-color: #f5f5f5;
   transition: all 0.2s ease;
 }
 
@@ -50,7 +50,7 @@
   box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),
   0px 5px 8px 0px rgba(0,0,0,0.14),
   0px 1px 14px 0px rgba(0,0,0,0.12);
-  border-color: #1976d2; /* Основной цвет */
+  border-color: #1976d2;
   cursor: pointer;
 }
 
@@ -93,65 +93,9 @@
 }
 
 .resourcePositive {
-  color: #4caf50; /* Цвет успеха MUI */
+  color: #4caf50;
 }
 
 .resourceNegative {
-  color: #f44336; /* Цвет ошибки MUI */
+  color: #f44336;
 }
-
-
-/*.head {
-  background-color: lightgray;
-  display: flex;
-  border-radius: 10px;
-  border: 2px solid #2c4fff;
-  padding: 5px;
-  align-items: center;
-  justify-content: center;
-  color: #2c4fff;
-}
-
-.wrapper1 {
-  background-color: lightgray;
-  display: flex;
-  flex-direction: column;
-  margin: 10px;
-  border-radius: 10px;
-  padding: 10px;
-  width: fit-content;
-  gap: 10px;
-}
-
-.wrapper2 {
-  background-color: #2c4fff;
-  display: flex;
-  flex-direction: column;
-  border-radius: 10px;
-  padding: 10px;
-  color: lightgray;
-}
-
-.wrapper3 {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-  margin-top: 10px;
-}
-
-.wrapper4 {
-  display: flex;
-  flex-direction: row;
-  background-color: lightgray;
-  color: #2c4fff;
-  border-radius: 10px;
-  padding: 2px 10px;
-  margin: 2px 5px;
-}
-
-.wrapper5 {
-  border: 1px solid rgba(57, 68, 80, 0.8);
-  border-radius: 10px;
-  padding: 5px;
-  margin: 5px 0;
-}*/
