--- a/client/src/elements/gameboard/map/Map.module.css
+++ b/client/src/elements/gameboard/map/Map.module.css
@@ -1,64 +1,15 @@
 .wrapper {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: 1fr auto 1fr;
   gap: 10px;
   justify-content: center;
+
+  @media (orientation: portrait) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
-
-
-.turnActionsContainer {
-  display: flex;
-  flex-direction: row;
-  margin-left: auto;
-  grid-column: 3/4;
-  margin-right: 3px;
-}
-
-.counter {
-  background-color: lightgray;
-  margin: auto;
-  border-radius: 10px;
-  padding: 2px 10px;
-  color: #2c4fff;
-}
-
-
-.resourcesContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin: 10px 15px;
-  background-color: lightgray;
-  border-radius: 10px;
-  padding: 2px 10px;
-}
-
-.resources {
-  display: flex;
-  flex-direction: column;
-  background-color: #2c4fff;
-  border-radius: 10px;
-}
-
-.resource {
-  background-color: lightgray;
-  margin: 2px 5px;
-  border-radius: 10px;
-  padding: 2px 10px;
-  color: #2c4fff;
-}
-
-
-.number{
-  display: flex;
-  background-color: lightgray;
-  margin: 10px 15px;
-  justify-content: center;
-  line-height: 1.5;
-  border-radius: 10px;
-  color: #2c4fff;
-}
-
 
 .container {
   display: flex;
@@ -67,10 +18,10 @@
   height: 500px;
   width: 600px;
   background-color: lightsteelblue;
-  transform: scale(100%);
   transform-origin: top left;
   margin: auto;
 }
+
 .grid {
   position: absolute;
   top: 0;
@@ -118,4 +69,57 @@
   transform-origin: top;
   margin-top: 12%;
   scale: 106%;
+}
+
+
+.turnActionsContainer {
+  display: flex;
+  flex-direction: row;
+  margin-left: auto;
+  margin-right: 3px;
+}
+
+.counter {
+  background-color: lightgray;
+  margin: auto;
+  border-radius: 10px;
+  padding: 2px 10px;
+  color: #2c4fff;
+}
+
+
+.resourcesContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 10px 15px;
+  background-color: lightgray;
+  border-radius: 10px;
+  padding: 2px 10px;
+}
+
+.resources {
+  display: flex;
+  flex-direction: column;
+  background-color: #2c4fff;
+  border-radius: 10px;
+}
+
+.resource {
+  background-color: lightgray;
+  margin: 2px 5px;
+  border-radius: 10px;
+  padding: 2px 10px;
+  color: #2c4fff;
+}
+
+
+.number{
+  display: flex;
+  background-color: lightgray;
+  margin: 10px 15px;
+  justify-content: center;
+  line-height: 1.5;
+  border-radius: 10px;
+  color: #2c4fff;
 }
