--- a/client/src/elements/gameboard/map/Map.module.css
+++ b/client/src/elements/gameboard/map/Map.module.css
@@ -27,7 +27,7 @@
   width: 600px;
   /*background-color: lightsteelblue;*/
   transform-origin: top left;
-  margin: auto;
+  margin-top: 0;
 }
 
 .grid {
@@ -55,7 +55,7 @@
   scale: 11.55%;
   margin-top: 9.2%;
   pointer-events: none;
-  z-index: 2;
+  z-index: 5;
 }
 
 .housesContainer {
@@ -66,7 +66,8 @@
   transform-origin: top;
   scale: 11.55%;
   margin-top: 3.5%;
-  z-index: 1;
+  pointer-events: none;
+  z-index: 4;
 }
 
 .numbersContainer {
@@ -77,6 +78,8 @@
   transform-origin: top;
   margin-top: 12%;
   scale: 106%;
+  z-index: 10;
+  pointer-events: none;
 }
 
 
