--- a/client/src/elements/gameboard/number/Number.module.css
+++ b/client/src/elements/gameboard/number/Number.module.css
@@ -10,9 +10,10 @@
   background-color: rgb(255, 255, 255, 0.6);
   font-size: 20px;
   font-weight: bold;
-  z-index: 5;
+  z-index: 15;
   scale: 50%;
   flex-shrink: 0;
+  pointer-events: auto;
 }
 
 .numbersRow {
@@ -23,4 +24,6 @@
   gap: 11%;
   margin-bottom: 6%;
   width: 100%;
+  z-index: 10;
+  pointer-events: none;
 }
