--- a/client/src/elements/gameboard/buildings/Buildings.module.css
+++ b/client/src/elements/gameboard/buildings/Buildings.module.css
@@ -3,22 +3,22 @@
   justify-content: center;
   align-items: center;
   flex-wrap: nowrap;
-  gap: 33%;
-  margin-bottom: 18%;
+  gap: 230px;
+  margin-bottom: 235px;
   z-index: 4;
   pointer-events: none;
 }
 
 .house {
-  height: 30%;
-  width: 30%;
+  height: 150px;
+  width: 150px;
   z-index: 4;
   box-sizing: border-box;
   pointer-events: auto;
 }
 
 .lower {
-  margin-top: 60%;
+  margin-top: 260px;
 }
 
 .turnedRoadsRow {
@@ -26,8 +26,8 @@
   justify-content: center;
   align-items: center;
   flex-wrap: nowrap;
-  gap: 22.5%;
-  margin-bottom: 14.5%;
+  gap: 130px;
+  margin-bottom: 95px;
   pointer-events: none;
   z-index: 5;
 }
@@ -37,23 +37,23 @@
   justify-content: center;
   align-items: center;
   flex-wrap: nowrap;
-  gap: 115%;
-  margin-bottom: 15%;
+  gap: 698px;
+  margin-bottom: 75px;
   pointer-events: none;
   z-index: 5;
 }
 
 .turned {
-  height: 40%;
-  width: 40%;
+  height: 180px;
+  width: 250px;
   z-index: 5;
   box-sizing: border-box;
   pointer-events: auto;
 }
 
 .vert {
-  height: 10%;
-  width: 10%;
+  height: 300px;
+  width: 60px;
   z-index: 5;
   box-sizing: border-box;
   pointer-events: auto;
