--- a/client/src/elements/gameboard/map/Map.module.css
+++ b/client/src/elements/gameboard/map/Map.module.css
@@ -53,7 +53,7 @@
   top: 0;
   transform-origin: top;
   scale: 11.55%;
-  margin-top: 9.2%;
+  margin-top: 50px;
   pointer-events: none;
   z-index: 5;
 }
@@ -65,7 +65,7 @@
   top: 0;
   transform-origin: top;
   scale: 11.55%;
-  margin-top: 3.5%;
+  margin-top: 30px;
   pointer-events: none;
   z-index: 4;
 }
