--- a/client/src/elements/gameboard/number/Number.module.css
+++ b/client/src/elements/gameboard/number/Number.module.css
@@ -21,8 +21,8 @@
   justify-content: center;
   align-items: center;
   flex-wrap: nowrap;
-  gap: 11%;
-  margin-bottom: 6%;
+  gap: 29px;
+  margin-bottom: 17px;
   width: 100%;
   z-index: 10;
   pointer-events: none;
